--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_image_scroll">ImageScrollActivity</string>
+    <string name="minimum_number_of_upvotes">Minimum number of upvotes</string>
 </resources>
