--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="rising_listing_category">rising</string>
     <string name="memes">memes</string>
     <string name="subreddit_name">Subreddit Name</string>
+    <string name="number_zero">0</string>
+    <string name="submit">Submit</string>
 </resources>
