UI: Change some layouts to be compatible with smaller screens!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,6 @@
         <item>cursedcomments</item>
         <item>CrappyDesign</item>
         <item>funny</item>
-        <item>tecnicallythetruth</item>
+        <item>technicallythetruth</item>
     </string-array>
 </resources>
